--- a/boramjul/header.html
+++ b/boramjul/header.html
@@ -42,6 +42,7 @@
             margin-left: 15px;
             text-decoration:none;
             text-align: center;
+            display: block;
         }
 
         #logo{
@@ -85,7 +86,7 @@
             width: 30px;
             height: 30px;
             cursor: pointer;
-            background-image: url(image/search.svg);
+            background-image: url(images/search.svg);
             border: 0;
             background-color: rgba(196, 196, 196, 1);
             margin-left: -50px;
@@ -95,44 +96,40 @@
 
         #main_menu{
             width: 100%;
-            height: 150px;
+            height: 120px;
         }
 
-        #menu{
-            width:1200px;
+        #menu{ 
+            width: 100%; 
             height: 100%;
-            margin: 0 auto;
         }
 
         #menu ul{
-            width:1200px;
-            height:100%;
-            text-align: center;
+            width: 100%;
+            margin-top: 60px;
         }
 
         #menu li{
-            width: 230px;
             font-size:24px;
-            float: left; 
+            text-align: center;
+            width: 20%;
         }
-
+    
         #menu a{
-            display: list-item;
-            margin-top: 80px;
             cursor: pointer;
             color: black;
             text-decoration:none;
             text-align: center;
             font-weight: bold;
+            font-size: 24px;
+            display: block;
         }
-    
+
         #header_line{
             background-color: #664B8E;
             width: 100%;
             height: 75px;
         }
-
-
 
     </style>
 
@@ -165,7 +162,7 @@
                 <ul>
                     <li><a href="#" class="menu">BEST SELLER</a></li>
                     <li><a href="#" class="menu">NEW BOOKS</a></li>
-                    <li><a href="#" class="menu">SECONDHAND</a></li>
+                    <li><a href="#" class="menu">BOOK REVIEW</a></li>
                     <li><a href="#" class="menu">LOCATION</a></li>
                     <li><a href="#" class="menu">MEMBERSHIP</a></li>
                 </ul>
