장바구니,리뷰 페이지 완성
리뷰페이지는 한 페이지 안에서 탭을 통해 나의댓글&나의 게시글 관리 가능하도록 함. 글 제목을 클릭하면 해당 글로 이동하도록 링크. 장바구니엔 체크박스를 추가하여 선택 구매,삭제 가능함.

--- a/boramjul/footer.html
+++ b/boramjul/footer.html
@@ -17,6 +17,8 @@
             height: 340px;
             background-color: rgba(198, 191, 205, 1);
             margin-top: 300px;
+            position: absolute;
+            bottom: 0;
 
         }
 
