--- a/boramjul/header.html
+++ b/boramjul/header.html
@@ -142,7 +142,7 @@
             <ul>
                 <li><a href="#" class="menu">로그인</a></li>
                 <li><a href="#" class="menu">회원가입</a></li>
-                <li><a href="#" class="menu">카트</a></li>
+                <li><a href="mycart.html" class="menu">카트</a></li>
                 <li><a href="#" class="menu">이벤트</a></li>
                 <li><a href="#" class="menu">고객센터</a></li>
             </ul>
@@ -160,11 +160,11 @@
         <div id="main_menu">
             <div id="menu">
                 <ul>
-                    <li><a href="#" class="menu">BEST SELLER</a></li>
+                    <li><a href="#" class="menu">BEST SELLERS</a></li>
                     <li><a href="#" class="menu">NEW BOOKS</a></li>
-                    <li><a href="#" class="menu">BOOK REVIEW</a></li>
-                    <li><a href="#" class="menu">LOCATION</a></li>
-                    <li><a href="#" class="menu">MEMBERSHIP</a></li>
+                    <li><a href="#" class="menu">BOOK REVIEWS</a></li>
+                    <li><a href="#" class="menu">BOOK STORES</a></li>
+                    <li><a href="myList.html" class="menu">MEMBERSHIP</a></li>
                 </ul>
             </div>
         </div>
