--- a/boramjul/myList.html
+++ b/boramjul/myList.html
@@ -31,32 +31,32 @@
 
         <div class="table">
             <table>
-                <tr style="height: 30px;">
+                <tr style="height: 40px;">
                     <td colspan="2"></td>
                     <td>책 제목</td>
                     <td>판매가/수량</td>
-                    <td>구매 날짜</td>
+                    <td>구매날짜</td>
                     <td>후기</td>
                 </tr>
                 <tr>
                     <td>1</td>
-                    <td><img src="images/아몬드.jpg" alt="책 이미지"></td>
-                    <td>정신 나갈 것 같애 정신 나갈 것 같애 미쳐버릴 것 같애 으아아아악</td>
+                    <td><img src="images/아몬드.jpg" alt="책 이미지" class="bookimg"></td>
+                    <td>아몽드</td>
                     <td>12000원<br>1권</td>
-                    <td>2020.01.01</td>
-                    <td><img style="height: 15px;"src="images/별점5.svg" alt="별점"></td>
+                    <td>2021.04.23</td>
+                    <td><img src="images/별점4h.svg" alt="별점" class="star"></td>
                 </tr>
                 <tr>
                     <td>2</td>
-                    <td><img src="images/아몬드.jpg" alt="책 이미지"></td>
+                    <td><img src="images/아몬드.jpg" alt="책 이미지" class="bookimg"></td>
                     <td>아몬드</td>
                     <td>12000원<br>1권</td>
                     <td>1992.12.29</td>
-                    <td><img style="height: 15px;" src="images/별점1.svg" alt="별점"></td>
+                    <td><img src="images/별점1.svg" alt="별점" class="star"></td>
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td><img src="images/아몬드.jpg" alt="책 이미지"></td>
+                    <td><img src="images/아몬드.jpg" alt="책 이미지" class="bookimg"></td>
                     <td>아몬드봉봉</td>
                     <td>12000원<br>1권</td>
                     <td>2021.04.22</td>
@@ -64,30 +64,62 @@
                 </tr>
                 <tr>
                     <td>4</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td><img src="images/아몬드.jpg" alt="책 이미지" class="bookimg"></td>
+                    <td>아몬드봉봉</td>
+                    <td>12000원<br>1권</td>
+                    <td>2021.04.22</td>
+                    <td><button class="review_btn">후기작성</button></td>
                 </tr>
                 <tr>
                     <td>5</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td><img src="images/아몬드.jpg" alt="책 이미지" class="bookimg"></td>
+                    <td>아몬드봉봉</td>
+                    <td>12000원<br>1권</td>
+                    <td>2021.04.22</td>
+                    <td><button class="review_btn">후기작성</button></td>
                 </tr>
                 <tr>
                     <td>6</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td><img src="images/아몬드.jpg" alt="책 이미지" class="bookimg"></td>
+                    <td>아몬드봉봉</td>
+                    <td>12000원<br>1권</td>
+                    <td>2021.04.22</td>
+                    <td><button class="review_btn">후기작성</button></td>
                 </tr>
-
+                <tr>
+                    <td>7</td>
+                    <td><img src="images/아몬드.jpg" alt="책 이미지" class="bookimg"></td>
+                    <td>아몬드봉봉</td>
+                    <td>12000원<br>1권</td>
+                    <td>2021.04.22</td>
+                    <td><button class="review_btn">후기작성</button></td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td><img src="images/아몬드.jpg" alt="책 이미지" class="bookimg"></td>
+                    <td>아몬드봉봉</td>
+                    <td>12000원<br>1권</td>
+                    <td>2021.04.22</td>
+                    <td><button class="review_btn">후기작성</button></td>
+                </tr>
+                <tr>
+                    <td>9</td>
+                    <td><img src="images/아몬드.jpg" alt="책 이미지" class="bookimg"></td>
+                    <td>아몬드봉봉</td>
+                    <td>12000원<br>1권</td>
+                    <td>2021.04.22</td>
+                    <td><button class="review_btn">후기작성</button></td>
+                </tr>
+                <tr>
+                    <td>10</td>
+                    <td><img src="images/아몬드.jpg" alt="책 이미지" class="bookimg"></td>
+                    <td>아몬드봉봉</td>
+                    <td>12000원<br>1권</td>
+                    <td>2021.04.22</td>
+                    <td><button class="review_btn">후기작성</button></td>
+                </tr>
             </table>
+            
         </div> <!--table-->
 
     </div> <!--box-->
