--- a/boramjul/myMenu.html
+++ b/boramjul/myMenu.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>나의 메뉴</title>
+
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+
 <style>
 
     *{
@@ -38,27 +41,30 @@
     }
 
     #my_menu{
-        width: 370px;
-        height: 700px;
+        width: 300px;
+        height: 1000px;
         float: left;
-
-
     }
 
     #my_menu_list{
         border-right: solid 1px #A1A1A1;
-        width: 370px;
-        height: 100%;
+        width: 300px;
+        height: 1000px;
+    }
 
+    #my_menu_list ul {
+        width: 300px;
+        height: 1000px;
     }
 
     #my_menu_list ul li{
         margin-top: 50px;
-        width:370px;
+        float: none;
+        text-align: center;
     }
 
     #my_menu_list ul li a{
-        display: list-item;
+        display: inline-block;
         cursor: pointer;
         color: black;
         text-decoration:none;
@@ -66,9 +72,23 @@
         text-align: center;
     }
 
+    #my_menu_list ul li a:hover{
+        border-bottom: solid 10px #E9CD39;
+    }
+
+    #my_menu_list ul li a:focus{
+        border-bottom: solid 10px #E9CD39;
+    }
+
+    #my_menu_list ul li a:visited{
+        border-bottom: solid 10px #E9CD39;
+    }
+
     #my_menu_list ul li:first-child{
         margin-top: 100px;
     }
+
+
 
 </style>
 
@@ -84,10 +104,10 @@
     <div id="my_menu">
         <div id="my_menu_list">
                 <ul>
-                    <li><a class="menu" href="#">주문내역 조회</a></li>
-                    <li><a class="menu" href="#">장바구니</a></li>
+                    <li><a class="menu" href="myList.html">주문내역 조회</a></li>
+                    <li><a class="menu" href="myCart.html">장바구니</a></li>
                     <li><a class="menu" href="#">나의 등급</a></li>
-                    <li><a class="menu" href="#">나의 후기</a></li>
+                    <li><a class="menu" href="myReview.html">나의 후기</a></li>
                     <li><a class="menu" href="#">회원정보 변경</a></li>
                 </ul>
         </div>
