'멤버쉽' 페이지 추가, '회원 정보 수정' 페이지 추가
'버튼'태그의 변수명 통일

--- a/boramjul/myMenu.html
+++ b/boramjul/myMenu.html
@@ -106,9 +106,9 @@
                 <ul>
                     <li><a class="menu" href="myList.html">주문내역 조회</a></li>
                     <li><a class="menu" href="myCart.html">장바구니</a></li>
-                    <li><a class="menu" href="#">나의 등급</a></li>
+                    <li><a class="menu" href="membership.html">나의 등급</a></li>
                     <li><a class="menu" href="myReview.html">나의 후기</a></li>
-                    <li><a class="menu" href="#">회원정보 변경</a></li>
+                    <li><a class="menu" href="myInfo.html">회원정보 변경</a></li>
                 </ul>
         </div>
     </div>
