--- a/boramjul/myCart.html
+++ b/boramjul/myCart.html
@@ -69,9 +69,9 @@
                         <td>12000원</td>
                         <td>
                             <div class="num">
-                                <button  class="num_btn" type="button" onclick="Count('m', this);">-</button>
+                                <button  class="numBtn" type="button" onclick="Count('m', this);">-</button>
                                 <input class="num_input" type="text" name="num" value="0" readonly="readonly" size="1"/>
-                                <button class="num_btn" type ="button" onclick="Count('p',this);">+</button>
+                                <button class="numBtn" type ="button" onclick="Count('p',this);">+</button>
                             </div>
                         </td>
                         <td><input type="checkbox" name="check" class="check"></td>
@@ -83,9 +83,9 @@
                         <td>12000원</td>
                         <td>
                             <div class="num">
-                                <button  class="num_btn" type="button" onclick="Count('m', this);">-</button>
+                                <button  class="numBtn" type="button" onclick="Count('m', this);">-</button>
                                 <input class="num_input" type="text" name="num" value="0" readonly="readonly" size="1"/>
-                                <button class="num_btn" type ="button" onclick="Count('p',this);">+</button>
+                                <button class="numBtn" type ="button" onclick="Count('p',this);">+</button>
                             </div>
                         </td>
                         <td><input type="checkbox" name="check" class="check" checked></td>
@@ -97,9 +97,9 @@
                         <td>12000원</td>
                         <td>
                             <div class="num">
-                                <button  class="num_btn" type="button" onclick="Count('m', this);">-</button>
+                                <button  class="numBtn" type="button" onclick="Count('m', this);">-</button>
                                 <input class="num_input" type="text" name="num" value="0" readonly="readonly" size="1"/>
-                                <button class="num_btn" type ="button" onclick="Count('p',this);">+</button>
+                                <button class="numBtn" type ="button" onclick="Count('p',this);">+</button>
                             </div>
                         </td>
                         <td><input type="checkbox" name="check" class="check"></td>
