폴더 정리 및 경로 수정/이벤트 페이지 추가/메인페이지 초안 추가
동주님이 커밋해주시면서 폴더가 좀 엉켜서ㅠㅠ 합쳐서 작업할수있도록 폴더 정리했습니다! 동주님 페이지 경로도 전부 수정해놨습니다. 차후 웹페이지 커밋할 때 이 페이지 자체를 워크스페이스로 지정해놓고 작업 후 커밋 하시는게 좋을 것 같습니다.

--- a/boramjul/join.html
+++ b/boramjul/join.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="box1">
-    <img id="logohead1" src="/boramjul/images/logo.png" alt="보람줄 로고" ><a id="logohead2">Join</a><br><br>
+    <img id="logohead1" src="images/logo.png" alt="보람줄 로고" ><a id="logohead2">Join</a><br><br>
     
     <table id="info_table">
         <tr>
