--- a/boramjul/myInfo.html
+++ b/boramjul/myInfo.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>나의 정보 수정</title>
 
-    <link rel="stylesheet" href="mypage.css">
+    <link rel="stylesheet" href="css/mypage.css">
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 
     <script type="text/javascript">   
