--- a/boramjul/myReview.html
+++ b/boramjul/myReview.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>나의 후기</title>
 
-    <link rel="stylesheet" href="mypage.css">
+    <link rel="stylesheet" href="css/mypage.css">
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 
     <script type="text/javascript">
@@ -53,7 +53,7 @@
                                 <td>1</td>
                                 <td><img src="images/아몬드.jpg" alt="책 이미지" class="bookimg"></td>
                                 <td>아몬드</td>
-                                <td><a href="#" class="review">ㄹㅇ후기 미쳤다 이 책 다들 사라</a></td>
+                                <td>ㄹㅇ후기 미쳤다 이 책 다들 사라</td>
                                 <td><img src="images/별점5.svg" alt="별점" class="star"></td>
                                 <td>2020.12.29</td>
                             </tr>
@@ -61,7 +61,7 @@
                                 <td>2</td>
                                 <td><img src="images/아몬드.jpg" alt="책 이미지" class="bookimg"></td>
                                 <td>아몬드</td>
-                                <td><a href="#" class="review">아몬드 먹으면서 아몬드 읽은 썰 푼다.</a></td>
+                                <td>아몬드 먹으면서 아몬드 읽은 썰 푼다.</td>
                                 <td><img src="images/별점1.svg" alt="별점" class="star"></td>
                                 <td>2018.08.18</td>
                             </tr>
