--- a/boramjul/changeOK.html
+++ b/boramjul/changeOK.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,9 +10,9 @@
 <body>
     <div id="box1">
     
-    <img id="logohead1" src="/boramjul/images/logo.png" alt="보람줄 로고" ><a id="logohead2">Boramjul</a><br><br>
+    <img id="logohead1" src="images/logo.png" alt="보람줄 로고" ><a id="logohead2">Boramjul</a><br><br>
     <a id="main">비밀번호 변경완료</a>
-    <img id="chk" src="/boramjul/images/checkmark 2.png"></a><br><br>
+    <img id="chk" src="images/checkmark 2.png"></a><br><br>
     <a id="name">비밀번호 변경 완료<br><br>즐거운 쇼핑 되세요<br><br>:-D</a><br>
      <button id="btn" type="submit"><a style="color: white;
         font-family: Roboto;
@@ -21,7 +21,7 @@
         font-size: 18px;
         line-height: 21px;
         text-decoration:none;"
-        href="http://www.naver.com">메인으로</a></button><br><br> 
+        href="main.html">메인으로</a></button><br><br> 
         </div>
 </body>
 </html>
