--- a/boramjul/changePWD.html
+++ b/boramjul/changePWD.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BORAMJUL-PWD</title>
-    <link rel="stylesheet" href="css/findPWD.css">
+    <title>BORAMJUL-ChangePWD</title>
+    <link rel="stylesheet" href="css/ChangePWD.css">
 </head>
 <body>
     <div id="box1">
     
-    <img id="logohead1" src="/boramjul/images/logo.png" alt="보람줄 로고" ><a id="logohead2">Boramjul</a><br><br>
-    <a id="main">비밀번호 찾기</a>
-    <a id="name">이름</a><br><br>
+    <img id="logohead1" src="images/logo.png" alt="보람줄 로고" ><a id="logohead2">Boramjul</a><br><br>
+    <a id="main">비밀번호 변경</a>
+    <a id="name">비밀번호</a><br><br>
     <input type="text" style="width:400px;
                                 font-size: 20px;
                                 border:none;
@@ -21,7 +21,7 @@
                                 position: absolute;
                                 left: 170px; 
                                 top: 285px;"><br><br>
-    <a id="email">본인확인 이메일</a><br><br>
+    <a id="email">비밀번호 확인</a><br><br>
     <input type="text" style="width:400px;
                                 font-size: 20px;
                                 border:none;
@@ -29,16 +29,7 @@
                                 border-bottom:3px solid #664B8E;
                                 position: absolute;
                                 left: 170px; 
-                                top: 390px;"><br><br>
-    <a id="id">아이디</a><br><br>
-    <input type="text" style="width:400px;
-                                font-size: 20px;
-                                border:none;
-                                outline:none;
-                                border-bottom:3px solid #664B8E;
-                                position: absolute;
-                                left: 170px; 
-                                top: 490px;"><br><br>
+                                top: 420px;"><br><br>
      <button id="btn" type="submit"><a style="color: white;
         font-family: Roboto;
         font-style: normal;
@@ -46,7 +37,7 @@
         font-size: 18px;
         line-height: 21px;
         text-decoration:none;"
-        href="changePWD.html">찾기</a></button><br><br> 
+        href="changeOK.html">변경</a></button><br><br> 
         </div>
 </body>
 </html>
