--- a/boramjul/findIDOK.html
+++ b/boramjul/findIDOK.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +10,7 @@
 <body>
     <div id="box1">
     
-    <img id="logohead1" src="/boramjul/images/logo.png" alt="보람줄 로고" ><a id="logohead2">Boramjul</a><br><br>
+    <img id="logohead1" src="images/logo.png" alt="보람줄 로고" ><a id="logohead2">Boramjul</a><br><br>
     <a id="main">본인확인 이메일로 찾기</a>
     <a id="name">ooo님의 아이디는<br><br>---입니다.</a><br>
      <button id="btn" type="submit"><a style="color: white;
@@ -20,7 +20,7 @@
         font-size: 18px;
         line-height: 21px;
         text-decoration:none;"
-        href="http://www.naver.com">메인으로</a></button><br><br> 
+        href="main.html">메인으로</a></button><br><br> 
     <button id="btn2" type="submit"><a style="color: white;
             font-family: Roboto;
             font-style: normal;
