--- a/boramjul/footer.html
+++ b/boramjul/footer.html
@@ -12,6 +12,16 @@
             padding: 0;
         }
 
+        @font-face {
+            font-family: "gmarket";
+            src: url("fonts/GmarketSansMedium.otf");
+        }
+
+        @font-face {
+            font-family: "nanum";
+            src: url("fonts/nanumbarungothic.ttf");
+        }
+
         .footer{
             width: 100%;
             height: 340px;
@@ -19,7 +29,6 @@
             margin-top: 300px;
             position: absolute;
             bottom: 0;
-
         }
 
         .footer p{
@@ -27,6 +36,7 @@
             Font-size: 20px;
             Line-height: 30px;
             text-align: center;
+            font-family: "gmarket";
         }
 
     </style>
