--- a/boramjul/header.html
+++ b/boramjul/header.html
@@ -8,8 +8,23 @@
     <style>
  
         @font-face {
-            font-family: "logofont";
+            font-family: "parisienne";
             src: url("fonts/parisienne_regular.ttf");
+        }
+
+        @font-face {
+            font-family: "gilroy";
+            src: url("fonts/gilroy_light.otf");
+        }
+
+        @font-face {
+            font-family: "gmarket";
+            src: url("fonts/GmarketSansMedium.otf");
+        }
+
+        @font-face {
+            font-family: "nanum";
+            src: url("fonts/nanumbarungothic.ttf");
         }
 
         *{
@@ -21,6 +36,22 @@
             list-style-type: none;
             float: left;
             marker: none;
+            text-align: center;
+        }
+
+        a{
+            text-decoration:none;
+            color: black;
+            text-align: center;
+        }
+
+        input{
+            outline:none;
+        }
+
+        button{
+            cursor: pointer;
+            border: 0;
         }
 
         .menu:hover{
@@ -37,12 +68,9 @@
         }
 
         #top_menu a{
-            cursor: pointer;
-            color: black;
             margin-left: 15px;
-            text-decoration:none;
-            text-align: center;
             display: block;
+            font-family: "gmarket";
         }
 
         #logo{
@@ -53,15 +81,14 @@
         }
 
         #logo_text{
-            font-family: "logofont";    
-            font-style: normal;
-            font-weight: 300;
+            font-family: "parisienne";
+            font-weight: 500;
             font-size: 48px;
             line-height: 56px;
             position: absolute;
             width: 263px;
             height: 74px;
-            left: 158px;
+            left: 120px;
             top: 133px;
         }
 
@@ -77,30 +104,30 @@
             background-color:rgba(196, 196, 196, 1);
             border: 0;
             border-radius: 10px;
-            outline:none;
             padding-left: 25px;
             font-style: oblique;
+            font-family: "nanum";
+            text-align: left;
         }
 
-        #search_btn{
+        #searchBtn{
             width: 30px;
             height: 30px;
-            cursor: pointer;
             background-image: url(images/search.svg);
-            border: 0;
             background-color: rgba(196, 196, 196, 1);
             margin-left: -50px;
-            outline:none;
             vertical-align: middle;
+            border: 0;
+            box-shadow: none;
         }
 
         #main_menu{
             width: 100%;
             height: 120px;
+            font-family: "gilroy";
         }
 
-        #menu{ 
-            width: 100%; 
+        #menu{
             height: 100%;
         }
 
@@ -111,15 +138,10 @@
 
         #menu li{
             font-size:24px;
-            text-align: center;
             width: 20%;
         }
     
         #menu a{
-            cursor: pointer;
-            color: black;
-            text-decoration:none;
-            text-align: center;
             font-weight: bold;
             font-size: 24px;
             display: block;
@@ -140,20 +162,20 @@
 
         <div id="top_menu">
             <ul>
-                <li><a href="#" class="menu">로그인</a></li>
-                <li><a href="#" class="menu">회원가입</a></li>
+                <li><a href="login.html" class="menu">로그인</a></li>
+                <li><a href="join.html" class="menu">회원가입</a></li>
                 <li><a href="mycart.html" class="menu">카트</a></li>
-                <li><a href="#" class="menu">이벤트</a></li>
+                <li><a href="event.html" class="menu">이벤트</a></li>
                 <li><a href="#" class="menu">고객센터</a></li>
             </ul>
         </div>
 
-        <img id="logo" src="images/logo.png" alt="보람줄 로고" ><a id="logo_text">Boramjul</a>
+        <img id="logo" src="images/logo.png" alt="보람줄 로고" ><a id="logo_text" href="main.html">Boramjul</a>
 
         <div id="search_box">
             <div id="search">
                 <input id="search_text" type="search" placeholder="Search...">
-                <button id="search_btn" type="submit">
+                <button id="searchBtn" type="submit">
             </div>
         </div>
 
