'메인'페이지 추가/주완님 커밋 파일 동기화
버튼 타입 추가

--- a/boramjul/myList.html
+++ b/boramjul/myList.html
@@ -60,7 +60,7 @@
                     <td>아몬드봉봉</td>
                     <td>12000원<br>1권</td>
                     <td>2021.04.22</td>
-                    <td><button class="reviewBtn">후기작성</button></td>
+                    <td><button class="reviewBtn" name="reviewBtn" type="submit">후기작성</button></td>
                 </tr>
                 <tr>
                     <td>4</td>
@@ -76,7 +76,7 @@
                     <td>아몬드봉봉</td>
                     <td>12000원<br>1권</td>
                     <td>2021.04.22</td>
-                    <td><button class="reviewBtn">후기작성</button></td>
+                    <td><button class="reviewBtn" name="reviewBtn" type="submit">후기작성</button></td>
                 </tr>
                 <tr>
                     <td>6</td>
@@ -84,7 +84,7 @@
                     <td>아몬드봉봉</td>
                     <td>12000원<br>1권</td>
                     <td>2021.04.22</td>
-                    <td><button class="reviewBtn">후기작성</button></td>
+                    <td><button class="reviewBtn" name="reviewBtn" type="submit">후기작성</button></td>
                 </tr>
                 <tr>
                     <td>7</td>
@@ -92,7 +92,7 @@
                     <td>아몬드봉봉</td>
                     <td>12000원<br>1권</td>
                     <td>2021.04.22</td>
-                    <td><button class="reviewBtn">후기작성</button></td>
+                    <td><button class="reviewBtn" name="reviewBtn" type="submit">후기작성</button></td>
                 </tr>
                 <tr>
                     <td>8</td>
@@ -100,7 +100,7 @@
                     <td>아몬드봉봉</td>
                     <td>12000원<br>1권</td>
                     <td>2021.04.22</td>
-                    <td><button class="reviewBtn">후기작성</button></td>
+                    <td><button class="reviewBtn" name="reviewBtn" type="submit">후기작성</button></td>
                 </tr>
                 <tr>
                     <td>9</td>
@@ -108,7 +108,7 @@
                     <td>아몬드봉봉</td>
                     <td>12000원<br>1권</td>
                     <td>2021.04.22</td>
-                    <td><button class="reviewBtn">후기작성</button></td>
+                    <td><button class="reviewBtn" name="reviewBtn" type="submit">후기작성</button></td>
                 </tr>
                 <tr>
                     <td>10</td>
@@ -116,7 +116,7 @@
                     <td>아몬드봉봉</td>
                     <td>12000원<br>1권</td>
                     <td>2021.04.22</td>
-                    <td><button class="reviewBtn">후기작성</button></td>
+                    <td><button class="reviewBtn" name="reviewBtn" type="submit">후기작성</button></td>
                 </tr>
             </table>
             
