--- a/boramjul/myCart.html
+++ b/boramjul/myCart.html
@@ -110,8 +110,8 @@
             <div id="tot"><p>총 합산 금액: <strong>36000</strong>원</p></div>
 
             <div id="cart_btn">
-                <button id ="delBtn" type="submit">선택 삭제</button>
-                <button id="buyBtn"type="submit">구매 하기</button>
+                <button id ="delBtn" name="delBtn" type="submit">선택 삭제</button>
+                <button id="buyBtn" name="buyBtn" type="submit">구매 하기</button>
             </div>
 
         </div><!--box-->
