--- a/boramjul/myInfo.html
+++ b/boramjul/myInfo.html
@@ -77,7 +77,7 @@
                         <td><input type="text"></td>
                     </tr>
                     <tr>
-                        <td><button id="infoBtn">수정하기</button></td>
+                        <td><button id="infoBtn" name="infoBtn" type="submit">수정하기</button></td>
                     </tr>
                 </table>
             </div>
