--- a/boramjul/login.html
+++ b/boramjul/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div id="box1">
-    </div>
-    <img id="logohead1" src="images/logo.png" alt="보람줄 로고" ><a id="logohead2">Login</a><br><br>
+    
+    <img id="logohead1" src="/boramjul/images/logo.png" alt="보람줄 로고" ><a id="logohead2">Login</a><br><br>
     <a id="id">아이디</a><br><br>
     <input type="text" style="width:500px;
                                 font-size: 20px;
@@ -18,7 +18,7 @@
                                 outline:none;
                                 border-bottom:3px solid #664B8E;
                                 position: absolute;
-                                left: 650px; 
+                                left: 122px; 
                                 top: 280px;"><br><br>
     <a id="pwd">비밀번호</a><br><br>
     <input type="password" style="width:500px;
@@ -27,12 +27,12 @@
                                 outline:none;
                                 border-bottom:3px solid #664B8E;
                                 position: absolute;
-                                left: 650px; 
+                                left: 122px; 
                                 top: 400px;"><br><br>
     <input type="checkbox" name="loging" style="position: absolute;
                                             width: 15px;
                                             height: 15px;
-                                             left: 650px; top:450px;"><a style="position: absolute; left: 680px; top: 452px; font-family: detailfont;
+                                             left: 120px; top:450px;"><a style="position: absolute; left: 150px; top: 452px; font-family: detailfont;
                                                                                 font-style: normal; font-weight: bold;
                                                                                 ">로그인유지</a><br><br>
      <button id="btn" type="submit"><a style="color: white;
@@ -43,15 +43,15 @@
                                             line-height: 21px;
                                             font-family: mainfont;
                                             text-decoration:none;"
-        href="main.html">로그인</a></button><br><br> 
+        href="http://www.naver.com">로그인</a></button><br><br> 
      
      <a href="findID.html" id="findid" style="text-decoration:none;">아이디찾기</a>
      <a href="findPWD.html" id="findpwd"style="text-decoration:none;">비밀번호찾기</a>
-     <a href="join.html" id="join" style="text-decoration:none;">회원가입</a>
+     <a href="join1.html" id="join" style="text-decoration:none;">회원가입</a>
      <a id="or">또는</a>
-     <a href="http://www.naver.com"><img src="images/kakaologo.png" id="kakao"></a>
-     <a href="http://www.naver.com"><img src="images/naverlogo.png" id="naver"></a>
-     <a href="http://www.naver.com"><img src="images/googlelogo.png" id="google"></a>
-
+     <a href="http://www.naver.com"><img src="/boramjul/images/kakaologo.png" id="kakao"></a>
+     <a href="http://www.naver.com"><img src="/boramjul/images/naverlogo.png" id="naver"></a>
+     <a href="http://www.naver.com"><img src="/boramjul/images/googlelogo.png" id="google"></a>
+    </div>
 </body>
 </html>
