슬라이드 완성/ 파일 경로 재지정
메인 페이지 슬라이드 최종 수정 /  일부  파일들 이미지 경로 재지정 / 링크 추가

--- a/boramjul/join1_1.html
+++ b/boramjul/join1_1.html
@@ -10,7 +10,7 @@
 <body>
     <div id="box1">
     
-    <img id="logohead1" src="/boramjul/images/logo.png" alt="보람줄 로고" ><a id="logohead2">Boramjul</a><br><br>
+    <img id="logohead1" src="images/logo.png" alt="보람줄 로고" ><a id="logohead2">Boramjul</a><br><br>
     <a id="main">이용약관</a>
     <div id="box2">
         <a>＊제1조(목적) 이 약관은 보람줄이 운영하는 보람줄 몰(이하 “몰”이라 한다)에서 제공하는 인터넷 관련 서비스(이하 “서비스”라 한다)를 이용함에 있어 사이버 몰과 이용자의 권리․의무 및 책임사항을 규정함을 목적으로 합니다.
