--- a/boramjul/join1_2.html
+++ b/boramjul/join1_2.html
@@ -10,7 +10,7 @@
 <body>
     <div id="box1">
     
-    <img id="logohead1" src="/boramjul/images/logo.png" alt="보람줄 로고" ><a id="logohead2">Boramjul</a><br><br>
+    <img id="logohead1" src="images/logo.png" alt="보람줄 로고" ><a id="logohead2">Boramjul</a><br><br>
     <a id="main">개인정보 수집 및 이용동의</a>
     <div id="box2">
         <a>이용자의 개인정보는 원칙적으로 회원탈퇴 시 지체없이 파기합니다. 단, 다음의 정보에 대해서는 아래의 이유로 명시한 기간 동안 보존합니다.<br>
