--- a/boramjul/login.html
+++ b/boramjul/login.html
@@ -10,7 +10,7 @@
 <body>
     <div id="box1">
     
-    <img id="logohead1" src="/boramjul/images/logo.png" alt="보람줄 로고" ><a id="logohead2">Login</a><br><br>
+    <img id="logohead1" src="images/logo.png" alt="보람줄 로고" ><a id="logohead2">Login</a><br><br>
     <a id="id">아이디</a><br><br>
     <input type="text" style="width:500px;
                                 font-size: 20px;
@@ -43,15 +43,15 @@
                                             line-height: 21px;
                                             font-family: mainfont;
                                             text-decoration:none;"
-        href="http://www.naver.com">로그인</a></button><br><br> 
+        href="main.html">로그인</a></button><br><br> 
      
      <a href="findID.html" id="findid" style="text-decoration:none;">아이디찾기</a>
      <a href="findPWD.html" id="findpwd"style="text-decoration:none;">비밀번호찾기</a>
      <a href="join1.html" id="join" style="text-decoration:none;">회원가입</a>
      <a id="or">또는</a>
-     <a href="http://www.naver.com"><img src="/boramjul/images/kakaologo.png" id="kakao"></a>
-     <a href="http://www.naver.com"><img src="/boramjul/images/naverlogo.png" id="naver"></a>
-     <a href="http://www.naver.com"><img src="/boramjul/images/googlelogo.png" id="google"></a>
+     <a href="http://www.naver.com"><img src="images/kakaologo.png" id="kakao"></a>
+     <a href="http://www.naver.com"><img src="images/naverlogo.png" id="naver"></a>
+     <a href="http://www.naver.com"><img src="images/googlelogo.png" id="google"></a>
     </div>
 </body>
 </html>
