Revert "Merge branch 'main' of https://github.com/Naury74/Boramjul_Web into main"
This reverts commit 5b15b7e7637e442436f28ada6fc3549223b43822, reversing
changes made to 82b337e24bfb71c8c04f91c798bcbbcabde02729.

--- a/boramjul/header.html
+++ b/boramjul/header.html
@@ -182,7 +182,7 @@
         <div id="main_menu">
             <div id="menu">
                 <ul>
-                    <li><a href="BestSellers.html" class="menu">BEST SELLERS</a></li>
+                    <li><a href="#" class="menu">BEST SELLERS</a></li>
                     <li><a href="#" class="menu">NEW BOOKS</a></li>
                     <li><a href="#" class="menu">BOOK REVIEWS</a></li>
                     <li><a href="#" class="menu">BOOK STORES</a></li>
