--- a/boramjul/myReview.html
+++ b/boramjul/myReview.html
@@ -69,6 +69,7 @@
                     </div><!--table-->
                 </section>
 
+             
                 <section id="content2">
                     <div class="table">
                         <table>
@@ -97,6 +98,7 @@
                             </tr>
                         </table>
                     </div><!--table-->
+                </section>
                 </section>
             
             </div><!--tabs-->
