--- a/boramjul/myCart.html
+++ b/boramjul/myCart.html
@@ -46,6 +46,11 @@
         <div id="header"></div>
 
         <div class="box">
+            
+            <div class="my_line">
+                <span id="mypage">My page</span>
+                <span id="mypage2">조성현님의 마이페이지 입니다.</span>
+            </div>
 
             <div id="myMenu"></div>
 
