--- a/boramjul/header.html
+++ b/boramjul/header.html
@@ -58,48 +58,63 @@
             transform:scale(1.1);
         }
 
+        .header{
+            width: 100%;
+        }
+
         #top_menu{
-            position: absolute;
-            right: 0;
-            display: list-item;
             list-style-type: none;
-            margin-right: 80px;
-            margin-top: 80px;
+            margin-top: 5%;
+            height: 100%;
+            width: 100%;
+            display: inline-block;
+        }
+
+        #top_menu ul{
+            float: right;
+            margin-right: 1%;
+        }
+
+        #top_menu ul li{
+            margin-right: 10px;
         }
 
         #top_menu a{
-            margin-left: 15px;
-            display: block;
             font-family: "gmarket";
         }
 
+        /************************* mid *****************************/
+
+        #mid_menu{
+            margin-top: 2%;
+        }
+
+        #logo_box{
+            display: inline-block;
+            margin-left: 10%;
+            width: 45%;
+        }
+
         #logo{
-            width: 80px;
-            height: 80px;
-            padding-top: 116px;
-            padding-left: 58px;
+            width: 15%;
+            height: 15%;
+            vertical-align: middle;
         }
 
         #logo_text{
             font-family: "parisienne";
-            font-weight: 500;
-            font-size: 48px;
-            line-height: 56px;
-            position: absolute;
-            width: 263px;
-            height: 74px;
-            left: 120px;
-            top: 133px;
+            font-size: 60px;
+            vertical-align: middle;
         }
 
         #search_box{
             float: right;
-            padding-top: 130px;
-            padding-right: 80px;
+            width: 35%;
+            height: 60px;
         }
 
         #search_text{
-            width: 550px;
+            padding-right: 5%;
             height: 60px;
             background-color:rgba(196, 196, 196, 1);
             border: 0;
@@ -108,6 +123,8 @@
             font-style: oblique;
             font-family: "nanum";
             text-align: left;
+            width: 90%;
+            margin-top: 5%;
         }
 
         #searchBtn{
@@ -121,27 +138,25 @@
             box-shadow: none;
         }
 
+        /***************************main menu**************************/
+
         #main_menu{
             width: 100%;
             height: 120px;
             font-family: "gilroy";
         }
 
-        #menu{
-            height: 100%;
-        }
-
-        #menu ul{
+        #main_menu ul{
             width: 100%;
-            margin-top: 60px;
+            margin-top: 3%;
         }
 
-        #menu li{
+        #main_menu li{
             font-size:24px;
             width: 20%;
         }
     
-        #menu a{
+        #main_menu a{
             font-weight: bold;
             font-size: 24px;
             display: block;
@@ -152,6 +167,7 @@
             width: 100%;
             height: 75px;
         }
+
 
     </style>
 
@@ -170,17 +186,21 @@
             </ul>
         </div>
 
-        <img id="logo" src="images/logo.png" alt="보람줄 로고" ><a id="logo_text" href="main.html">Boramjul</a>
+        <div id="mid_menu">
+            <div id="logo_box">
+                <img id="logo" src="images/logo.png" alt="보람줄 로고" >
+                <a id="logo_text" href="main.html">Boramjul</a>
+            </div>  
 
-        <div id="search_box">
-            <div id="search">
-                <input id="search_text" type="search" placeholder="Search...">
-                <button id="searchBtn" type="submit">
+            <div id="search_box">
+                <div id="search">
+                    <input id="search_text" type="search" placeholder="Search...">
+                    <button id="searchBtn" type="submit">
+                </div>
             </div>
-        </div>
+        </div><!--mid_menu-->
 
         <div id="main_menu">
-            <div id="menu">
                 <ul>
                     <li><a href="BestSellers.html" class="menu">BEST SELLERS</a></li>
                     <li><a href="#" class="menu">NEW BOOKS</a></li>
@@ -188,7 +208,6 @@
                     <li><a href="#" class="menu">BOOK STORES</a></li>
                     <li><a href="myList.html" class="menu">MEMBERSHIP</a></li>
                 </ul>
-            </div>
         </div>
 
         <div id="header_line"></div>
