--- a/boramjul/myInfo.html
+++ b/boramjul/myInfo.html
@@ -24,6 +24,13 @@
         <div id="header"></div>
 
         <div class="box">
+            <div class="my_line">
+                <span id="mypage">My page</span>
+                <span id="mypage2">조성현님의 마이페이지 입니다.</span>
+            </div>
+
+            
+
             <div id="myMenu"></div>
 
             <div class="menu_name">
@@ -80,7 +87,8 @@
                         <td><button id="infoBtn" name="infoBtn" type="submit">수정하기</button></td>
                     </tr>
                 </table>
-            </div>
+            </div><!--info_box-->
+
 
         </div><!--box-->
         <div id="footer"></div>
