--- a/boramjul/myMenu.html
+++ b/boramjul/myMenu.html
@@ -30,50 +30,27 @@
         src: url("fonts/GmarketSansMedium.otf");
     }
 
-    #my_line{
-        background-color: #664B8E;
-        height: 195px;
-    }
-
-    #mypage{
-        font-size: 64px;
-        color: white;
-        font-weight: bold;
-        margin-left:85px;
-        display: inline-block;
-        margin-top: 80px;
-        font-family: "gilroy";
-    }
-
-    #mypage2{
-        font-size: 20px;
-        color: white;
-        margin-left: 50px;
-        font-family: "nanum";
-    }
-
     #my_menu{
-        width: 300px;
+        width: 100%;
         height: 1000px;
-        float: left;
         font-family: "gmarket";
+        border-right: solid 1px #A1A1A1;
+
     }
 
     #my_menu_list{
         border-right: solid 1px #A1A1A1;
-        width: 300px;
-        height: 1000px;
+        width: 100%;
     }
 
     #my_menu_list ul {
-        width: 300px;
         height: 1000px;
+        width: 100%;
     }
 
     #my_menu_list ul li{
         margin-top: 50px;
         float: none;
-        text-align: center;
     }
 
     #my_menu_list ul li a{
@@ -98,21 +75,14 @@
     }
 
     #my_menu_list ul li:first-child{
-        margin-top: 100px;
+        margin-top: 50%;
     }
 
-
-
 </style>
-
 </head>
+
 <body>
 <div class="myMenu">
-    
-    <div id="my_line">
-        <span id="mypage">My page</span>
-        <span id="mypage2">조성현님의 마이페이지 입니다.</span>
-    </div>
 
     <div id="my_menu">
         <div id="my_menu_list">
@@ -124,7 +94,7 @@
                     <li><a class="menu" href="myInfo.html">회원정보 변경</a></li>
                 </ul>
         </div>
-    </div>
+    </div><!--my_menu-->
 
 </div>
 
