회원가입,css변경

--- a/boramjul/Join1.html
+++ b/boramjul/Join1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -39,7 +39,7 @@
                                     line-height: 18px;
                                     text-align: center;
                                    
-                                    background-color:white;"><a style="color: black; text-decoration:none; font-weight: bold;" href="join1_1.html" >></a></button>
+                                    background-color:white;"><a style="color: black; text-decoration:none; font-weight: bold;" href="/boramjul/login/join1_1.html" >></a></button>
      <hr style="position: absolute; width: 400px; height: 0px; left: 160px; top: 310px; border: 1px solid #A1A1A1;"  >   
 
      <input type="checkbox" name="loging" style="position: absolute;
@@ -61,7 +61,7 @@
      line-height: 18px;
      text-align: center;
     
-     background-color: white;"><a style="color:black; text-decoration:none; font-weight: bold;" href="join1_2.html" >></a></button>                                    
+     background-color: white;"><a style="color:black; text-decoration:none; font-weight: bold;" href="/boramjul/login/join1_2.html" >></a></button>                                    
      <hr style="position: absolute; width: 400px; height: 0px; left: 160px; top: 365px; border: 1px solid #A1A1A1;"  >                                        
      <input type="checkbox" name="loging" style="position: absolute;
      width: 25px;
@@ -93,7 +93,7 @@
         font-size: 18px;
         line-height: 21px;
         text-decoration:none;"
-        href="join.html">동의 후 계속하기</a></button><br><br> 
+        href="/boramjul/login/join.html">동의 후 계속하기</a></button><br><br> 
         </div>
 </body>
 </html>
