--- a/boramjul/changeOK.html
+++ b/boramjul/changeOK.html
@@ -15,13 +15,13 @@
     <img id="chk" src="images/checkmark 2.png"></a><br><br>
     <a id="name">비밀번호 변경 완료<br><br>즐거운 쇼핑 되세요<br><br>:-D</a><br>
      <button id="btn" type="submit"><a style="color: white;
-        font-family: Roboto;
+        font-family: btn;
         font-style: normal;
         font-weight: bold;
         font-size: 18px;
         line-height: 21px;
         text-decoration:none;"
-        href="main.html">메인으로</a></button><br><br> 
+        href="http://www.naver.com">메인으로</a></button><br><br> 
         </div>
 </body>
 </html>
