--- a/boramjul/join.html
+++ b/boramjul/join.html
@@ -10,52 +10,92 @@
 <body>
     <div id="box1">
     <img id="logohead1" src="images/logo.png" alt="보람줄 로고" ><a id="logohead2">Join</a><br><br>
-    
     <table id="info_table">
         <tr>
             <td>아이디</td>
         </tr>
         <tr>
-            <td><input type="text"></td>
+            <td><input type="text" style="width:350px;
+                font-size: 20px;
+                border:none;
+                outline:none;
+                border-bottom:3px solid #664B8E;"></td>
         </tr>
         <tr>
             <td>비밀번호</td>
         </tr>
         <tr>
-            <td><input type="password"></td>
+            <td><input type="password" style="width:350px;
+                font-size: 20px;
+                border:none;
+                outline:none;
+                border-bottom:3px solid #664B8E;"></td>
         </tr>
         <tr>
             <td>이름</td>
         </tr>
         <tr>
-            <td><input type="text"></td>
+            <td><input type="text" style="width:350px;
+                font-size: 20px;
+                border:none;
+                outline:none;
+                border-bottom:3px solid #664B8E;"></td>
         </tr>
         <tr>
             <td>생년월일</td>
         </tr>
         <tr>
-            <td><input type="date"></td>
+            <td><input type="date" style="width:350px;
+                font-size: 20px;
+                border:none;
+                outline:none;
+                border-bottom:3px solid #664B8E;"></td>
         </tr>
         <tr>
             <td>전화번호</td>
         </tr>
         <tr>
-            <td><input type="tel"></td>
+            <td><input type="tel" style="width:350px;
+                font-size: 20px;
+                border:none;
+                outline:none;
+                border-bottom:3px solid #664B8E;"></td>
         </tr>
         <tr>
             <td>이메일 주소</td>
         </tr>
         <tr>
-            <td><input type="email"></td>
+            <td><input type="email" style="width:350px;
+                font-size: 20px;
+                border:none;
+                outline:none;
+                border-bottom:3px solid #664B8E;"></td>
         </tr>
         <tr>
             <td>주소</td>
         </tr>
         <tr>
-            <td><input type="text"></td>
+            <td><input type="text" style="width:350px;
+                font-size: 20px;
+                border:none;
+                outline:none;
+                border-bottom:3px solid #664B8E;"></td>
         </tr>
         <tr>
-            <td><button id="infoBtn">가입하기</button></td>
+            <td>성별</td>
+        </tr>
+        <tr>
+            <tr>
+                <td style="position: absolute; left: 80px;"><input type="radio" name="human" value="man" style="width:20px; height: 20px; position: absolute; left: 20px;">남</td>
+                <td style="position: absolute; left: 170px;"><input type="radio" name="human" value="woman" style="width:20px; height: 20px; position: absolute; left: 20px;">여</td>
+        </tr>
+        <tr>
+            <td><button id="infoBtn"><a style="color: white;
+                font-family: btn;
+                font-style: normal;
+                font-size: 25px;
+                line-height: 21px;
+                text-decoration:none;" href="joinok.html">가입하기</a></button></td>
         </tr>
     </table>
     </div>
