--- a/boramjul/joinok.html
+++ b/boramjul/joinok.html
@@ -4,31 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BORAMJUL-FINDOK</title>
-    <link rel="stylesheet" href="css/findIDOK.css">
+    <title>BORAMJUL-JOINOK</title>
+    <link rel="stylesheet" href="css/joinok.css">
 </head>
 <body>
     <div id="box1">
     
     <img id="logohead1" src="images/logo.png" alt="보람줄 로고" ><a id="logohead2">Boramjul</a><br><br>
-    <a id="main">본인확인 이메일로 찾기</a>
-    <a id="name">ooo님의 아이디는<br><br>---입니다.</a><br>
+    <a id="main">회원가입 완료</a>
+    <img id="chk" src="images/checkmark 2.png"></a><br><br>
+    <a id="name">OOO님 회원가입을 축하드립니다<br><br>보람줄과 함께 즐거운 쇼핑 되세요!<br><br>:-D</a><br>
      <button id="btn" type="submit"><a style="color: white;
-        font-family: Roboto;
+        font-family: btn;
         font-style: normal;
         font-weight: bold;
         font-size: 18px;
         line-height: 21px;
         text-decoration:none;"
         href="http://www.naver.com">메인으로</a></button><br><br> 
-    <button id="btn2" type="submit"><a style="color: white;
-            font-family: Roboto;
-            font-style: normal;
-            font-weight: bold;
-            font-size: 18px;
-            line-height: 21px;
-            text-decoration:none;"
-            href="findPWD.html">비밀번호 찾기</a></button><br><br> 
         </div>
 </body>
 </html>
