메인페이지/마이페이지 관련 페이지들 900xp 이하 너비에서 적용되는 레이아웃 수정
일부파일 경로 수정

--- a/boramjul/changeOK.html
+++ b/boramjul/changeOK.html
@@ -21,7 +21,7 @@
         font-size: 18px;
         line-height: 21px;
         text-decoration:none;"
-        href="http://www.naver.com">메인으로</a></button><br><br> 
+        href="main.html">메인으로</a></button><br><br> 
         </div>
 </body>
 </html>
