--- a/boramjul/joinok.html
+++ b/boramjul/joinok.html
@@ -21,7 +21,7 @@
         font-size: 18px;
         line-height: 21px;
         text-decoration:none;"
-        href="http://www.naver.com">메인으로</a></button><br><br> 
+        href="main.html">메인으로</a></button><br><br> 
         </div>
 </body>
 </html>
