--- a/boramjul/login.html
+++ b/boramjul/login.html
@@ -43,7 +43,7 @@
                                             line-height: 21px;
                                             font-family: mainfont;
                                             text-decoration:none;"
-        href="http://www.naver.com">로그인</a></button><br><br> 
+        href="main.html">로그인</a></button><br><br> 
      
      <a href="findID.html" id="findid" style="text-decoration:none;">아이디찾기</a>
      <a href="findPWD.html" id="findpwd"style="text-decoration:none;">비밀번호찾기</a>
