도서 및 리뷰 페이지 html, css 완료

--- a/JW-Boramjul_Books&Reviews/BookPageSoldout.html
+++ b/JW-Boramjul_Books&Reviews/BookPageSoldout.html
@@ -236,9 +236,8 @@
     <ul>
       <div class="book_review_wrapper">         
         <div class="review_total">
-          <span class="number_of_reviews">1000</span>
-          <span>명의 보람줄 회원이 평가한 평균별점</span>
-        <div class="total_book_scores"><img src="images/별점5.svg" alt="별점" id="total_star"><span style="font-size: 60px;">9.9</span> / 10
+          <span class="number_of_reviews">1000</span><span>명의 보람줄 회원이 평가한 평균별점</span>
+        <div class="total_book_scores"><img src="images/별점5.svg" alt="별점" id="total_star"><span style="font-size: 60px;"> 9.9</span> / 10
         </div>
       </div>
       <div class="please_write">책에 대한 고객님의 생각을 들려주세요 
