--- a/황지현/order.html
+++ b/황지현/order.html
@@ -76,9 +76,9 @@
                                     <tr>
                                         <th><strong>*</strong>휴대전화번호</th>
                                         <td>
-                                            <input type="number" placeholder="" required> -
-                                            <input type="number" placeholder="" required> -
-                                            <input type="number" placeholder="" required>
+                                            <input type="tel" placeholder="010" required> -
+                                            <input type="tel" placeholder="" required> -
+                                            <input type="tel" placeholder="" required>
                                         </td>
                                     </tr>
                                     <tr>
@@ -104,10 +104,10 @@
                                             <label for="etc">다른결제수단</label>
                                         </li>
                                         <li>
-                                            <input type="radio" id="kakao" class="kakao" name="pay_choice">
+                                            <input type="radio" id="kakao" class="kakao" name="pay_choice1">
                                             <img src="./img/ico_kakao.png" alt="">
                                             <label for="kakao">카카오페이</label>
-                                            <input type="radio" id="naver" class="naver" name="pay_choice">
+                                            <input type="radio" id="naver" class="naver" name="pay_choice1">
                                             <img src="./img/ico_naver.png" alt="">
                                             <label for="naver">네이버페이</label>
                                         </li>
