--- a/boramjul/header.html
+++ b/boramjul/header.html
@@ -289,7 +289,7 @@
                 <li><a href="join.html" class="topmenu">회원가입</a></li>
                 <li><a href="mycart.html" class="topmenu">카트</a></li>
                 <li><a href="event.html" class="topmenu">이벤트</a></li>
-                <li><a href="#" class="topmenu">고객센터</a></li>
+                <li><a href="QnA.html" class="topmenu">고객센터</a></li>
             </ul>
         </div><!--top_menu-->
 
