배송상태조회 내역 추가

--- a/boramjul/header.html
+++ b/boramjul/header.html
@@ -334,7 +334,7 @@
                     <li><a href="BestSellers.html" class="topmenu">BEST SELLERS</a></li>
                     <li><a href="#" class="topmenu">NEW BOOKS</a></li>
                     <li><a href="#" class="topmenu">BOOK REVIEWS</a></li>
-                    <li><a href="#" class="topmenu">BOOK STORES</a></li>
+                    <li><a href="map.html" class="topmenu">BOOK STORES</a></li>
                     <li><a href="myList.html" class="topmenu">MEMBERSHIP</a></li>
                 </ul>
         </div><!--main_menu-->
