--- a/boramjul/myList.html
+++ b/boramjul/myList.html
@@ -42,6 +42,7 @@
                     <td>책 제목</td>
                     <td>판매가/수량</td>
                     <td>구매날짜</td>
+                    <td>배송상태</td>
                     <td>후기</td>
                 </tr>
                 <tr>
@@ -50,6 +51,7 @@
                     <td>아몽드</td>
                     <td>12000원<br>1권</td>
                     <td>2021.04.23</td>
+                    <td>상품 준비중</td>
                     <td><img src="images/별점4h.svg" alt="별점" class="star"></td>
                 </tr>
                 <tr>
@@ -58,6 +60,7 @@
                     <td>아몬드</td>
                     <td>12000원<br>1권</td>
                     <td>1992.12.29</td>
+                    <td>배송중</td>
                     <td><img src="images/별점1.svg" alt="별점" class="star"></td>
                 </tr>
                 <tr>
@@ -66,6 +69,7 @@
                     <td>아몬드봉봉</td>
                     <td>12000원<br>1권</td>
                     <td>2021.04.22</td>
+                    <td>배송완료</td>
                     <td><button class="reviewBtn" name="reviewBtn" type="submit">후기작성</button></td>
                 </tr>
                 <tr>
@@ -74,56 +78,10 @@
                     <td>아몬드봉봉</td>
                     <td>12000원<br>1권</td>
                     <td>2021.04.22</td>
+                    <td>배송중</td>
                     <td><button class="reviewBtn">후기작성</button></td>
                 </tr>
-                <tr>
-                    <td>5</td>
-                    <td><img src="images/아몬드.jpg" alt="책 이미지" class="bookimg"></td>
-                    <td>아몬드봉봉</td>
-                    <td>12000원<br>1권</td>
-                    <td>2021.04.22</td>
-                    <td><button class="reviewBtn" name="reviewBtn" type="submit">후기작성</button></td>
-                </tr>
-                <tr>
-                    <td>6</td>
-                    <td><img src="images/아몬드.jpg" alt="책 이미지" class="bookimg"></td>
-                    <td>아몬드봉봉</td>
-                    <td>12000원<br>1권</td>
-                    <td>2021.04.22</td>
-                    <td><button class="reviewBtn" name="reviewBtn" type="submit">후기작성</button></td>
-                </tr>
-                <tr>
-                    <td>7</td>
-                    <td><img src="images/아몬드.jpg" alt="책 이미지" class="bookimg"></td>
-                    <td>아몬드봉봉</td>
-                    <td>12000원<br>1권</td>
-                    <td>2021.04.22</td>
-                    <td><button class="reviewBtn" name="reviewBtn" type="submit">후기작성</button></td>
-                </tr>
-                <tr>
-                    <td>8</td>
-                    <td><img src="images/아몬드.jpg" alt="책 이미지" class="bookimg"></td>
-                    <td>아몬드봉봉</td>
-                    <td>12000원<br>1권</td>
-                    <td>2021.04.22</td>
-                    <td><button class="reviewBtn" name="reviewBtn" type="submit">후기작성</button></td>
-                </tr>
-                <tr>
-                    <td>9</td>
-                    <td><img src="images/아몬드.jpg" alt="책 이미지" class="bookimg"></td>
-                    <td>아몬드봉봉</td>
-                    <td>12000원<br>1권</td>
-                    <td>2021.04.22</td>
-                    <td><button class="reviewBtn" name="reviewBtn" type="submit">후기작성</button></td>
-                </tr>
-                <tr>
-                    <td>10</td>
-                    <td><img src="images/아몬드.jpg" alt="책 이미지" class="bookimg"></td>
-                    <td>아몬드봉봉</td>
-                    <td>12000원<br>1권</td>
-                    <td>2021.04.22</td>
-                    <td><button class="reviewBtn" name="reviewBtn" type="submit">후기작성</button></td>
-                </tr>
+
             </table>
             
         </div> <!--table-->
