db구조 수정 사항
제가 맡고있는 페이지 관련 디비 테이블과, 그냥 눈에 보이는 다른분들 디비테이블 수정 관련 작성해서 커밋합니다. 제가 맡지않은 페이지는 잘 몰라서 기성님과 담당자분 상의하시면 좋을 듯 합니다. 개인정보 수정 페이지 css 일부 수정했습니다.

--- a/boramjul/myCart.html
+++ b/boramjul/myCart.html
@@ -65,7 +65,7 @@
                         <td>책 제목</td>
                         <td>판매가</td>
                         <td>수량</td>
-                        <td><input type="checkbox" name="check" class="check" id="allCheck" ></td>
+                        <td><input type="checkbox" name="check" class="check" id="allCheck" checked ></td>
                     </tr>
                     <tr>
                         <td>1</td>
@@ -79,7 +79,7 @@
                                 <button class="numBtn" type ="button" onclick="Count('p',this);">+</button>
                             </div>
                         </td>
-                        <td><input type="checkbox" name="check" class="check"></td>
+                        <td><input type="checkbox" name="check" class="check" checked></td>
                     </tr>
                     <tr>
                         <td>2</td>
@@ -107,7 +107,7 @@
                                 <button class="numBtn" type ="button" onclick="Count('p',this);">+</button>
                             </div>
                         </td>
-                        <td><input type="checkbox" name="check" class="check"></td>
+                        <td><input type="checkbox" name="check" class="check" checked></td>
                     </tr>
                 </table>
             </div><!--table-->
