--- a/황지현/completed.html
+++ b/황지현/completed.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="./css/default.css">
 </head>
 <body>
-<!-- container -->
+        <!-- container -->
         <section id="container">
             <div class="contents">
-
                 <form action="">
                     <div class="complete_wrap">
                         <h2>주문이 <strong>완료</strong>되었습니다.</h2>
@@ -39,6 +38,7 @@
                             </tbody>
                         </table>   
                         <div class="btnset">
+                            <a href="map.html" class="order_search">메인페이지</a>
                             <button type="submit" class="order_search">주문 내역 조회 </button>
                         </div>                     
                     </div>
@@ -46,5 +46,6 @@
                 
             </div>
         </section>
+    </section>
 </body>
 </html>
