--- a/황지현/map.html
+++ b/황지현/map.html
@@ -14,7 +14,7 @@
                 <section class="map">
                     <h2>주변서점검색</h2>
                     <div class="map_area">
-                        <iframe src="http://naver.me/xhHBKn79" frameborder="0" width="100%" height="700"></iframe>
+                        <iframe src="http://naver.me/xpPdQTsP" frameborder="0" width="100%" height="700"></iframe>
                     </div>
                     <ul>
                         <li>* 주변 검색을 위해 고객님의 위치 정보를 이용합니다.</li>
