--- a/황지현/order.html
+++ b/황지현/order.html
@@ -78,9 +78,9 @@
                                     <tr>
                                         <th><strong>*</strong>휴대전화번호</th>
                                         <td>
-                                            <input type="number" placeholder="010" required> -
-                                            <input type="number" placeholder="" required> -
-                                            <input type="number" placeholder="" required>
+                                            <input type="tel" placeholder="010" required> -
+                                            <input type="tel" placeholder="" required> -
+                                            <input type="tel" placeholder="" required>
                                         </td>
                                     </tr>
                                     <tr>
