main.jsp와 연결되는 maincontroller
servlet-context에 resources 부분 보시고 저대로 폴더 만들 때 마다 추가하셔야 맵핑이 됩니다. 꼭 추가하세요

--- a/boramjul/main.html
+++ b/boramjul/main.html
@@ -59,7 +59,10 @@
 
                 <div id="best-back">               
                     <div id="bookImg">
-                        <img src="images/bestimg.svg" alt="베스트셀러이미지">
+                        <img src="images/아몬드.jpg" alt="베스트셀러이미지">
+                        <img id="best2" src="images/아몬드.jpg" alt="베스트셀러이미지">
+                        <img id="best3" src="images/아몬드.jpg" alt="베스트셀러이미지">
+
                         <a class="more" href="books/BestSellers.html">MORE+</a>
                     </div>
                 </div>
